--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.8.2",
+    "gantt-elastic": "^1.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
